# knowledge-platform

./: .gitattributes  .gitignore  MIGRATION-REPORT.md  README.md  Specifications.md
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS
.github/workflows/: vault-governance.yml
Obsidian Vault/: .stignore
Obsidian Vault/.obsidian/: daily-notes.json  types.json
Obsidian Vault/00 Governance/: AI Contribution Policy.md  Metadata Standard.md  Promotion Policy.md  Type Dictionary.md
engine/: .gitignore  AGENTS.md  CLAUDE.md  HANDOFF.md  pyproject.toml
engine/.agents/skills/knowledge-vault/: SKILL.md
engine/.claude/skills/knowledge-vault/: SKILL.md
engine/docs/: GOVERNANCE-RUNBOOK.md  RUNBOOK.md  browsing-obsidian.md
engine/scripts/: install_hooks.py  reslug_vault.py  sync_skill.py
engine/specs/: stage-1-testing.md  stage-2-skill.md  stage-3-deploy.md  vault-governance.md
engine/tests/: README.md  conftest.py  test_cli.py  test_decide.py  test_dedup_string.py  test_governance_inheritance.py  test_governance_lint.py  test_governance_moc.py  test_governance_policy.py  test_governance_schema.py  test_governance_validate.py  test_idempotency.py  test_policy.py  test_service.py  test_store_git.py  test_sync_skill.py  test_validate.py  test_vault_frontmatter.py
engine/vault_contrib/: __init__.py  cli.py  core.py  dedup_string.py  models.py  ports.py  service.py  store_git.py  vault_frontmatter.py
engine/vault_governance/: __init__.py  cli.py  findings.py  frontmatter_scan.py  inheritance.py  lint.py  moc.py  policy.py  schema.py  validate.py
(+174 files in other folders)
